--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
 language: python
 python:
-  - "3.6"
+  - 3.6
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install:
+  - sudo apt-get update # update packages
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda env create -f environment.yml
+  - source activate ci-test
 # command to run tests
-script: py.test -v
+script:
+  - py.test -v
